add token jwt in filter authInterceptor

--- a/front-end/src/app/views/home/home.component.html
+++ b/front-end/src/app/views/home/home.component.html
@@ -3,6 +3,9 @@
       <mat-icon>menu</mat-icon>
     </button>
     <span>Cargos</span>
+    <span class="example-spacer"></span>
+    <h4 style="font-size: 14px;">Usuario: {{email}}</h4>
+    <button style="margin-left: 10px;" (click)="logout()"><mat-icon aria-hidden="false" aria-label="Example home icon">logout</mat-icon></button>
     
   </mat-toolbar>
 
